# Picture-composer

./: .env.example  .gcloudignore  .gitignore  App.tsx  CLAUDE.md  Cópia de Modelos Locais para Geração de Conteúdo.txt  Dockerfile  Dockerfile.dev  GEMINI.md  Modal-Stack-Config_Promopt.md  README.md  SESSION_CONTEXT.md  adk_agent_list.json  constants.ts  deploy-local.sh  docker-compose.yml  index.html  latest.json  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.claude/: skill-rules.json
adk-agents/: .env.example  start-all.sh
backend/: backend.py  backend_v2.py  prompts.py
components/: MemoryViewer.tsx  MosaicCreator.tsx
docs/: NEXT-SESSION-CHAT.md  NEXT-SESSION-OLLAMA.md  TAURI_CONVERSION_PLAYBOOK.md  prompt-debug-tauri.md  research-midnight-rose-modal-deploy.md  research-midnight-rose-mythomax.md  research-qwen-abliterated.md  research-vlms-uncensored.md  rose.md
figma-reference/: README.md  package.json
hotcocoa_flutter/: .gitignore  FASE2_PHOTO_SYSTEM.md  FASE6_OLLAMA_SUMMARY.md  FASE6_VALIDATION_CHECKLIST.md  GOOGLE_INTEGRATION.md  GOOGLE_QUICK_START.md  MIGRATION_PLAN.md  NEXT_SESSION_PROMPT.md  OLLAMA_INTEGRATION.md  PHASE4_ANIMATIONS.md  QUICKSTART_OLLAMA.md  TESTE_OLLAMA.md  analysis_options.yaml  pubspec.yaml
scripts/: dev-cycle.sh  release.sh
src/: App.tsx  index.css  index.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  MODAL_COMMANDS.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
utils/: googleIntegration.ts  mosaic.ts
(+195 files in other folders)
