[package]
name = "hotcocoa"
version = "0.1.0"
description = "HotCocoa - Couples Memory Deck"
authors = ["PGR"]
license = "MIT"
repository = "https://github.com/PedroGiudice/Picture-composer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-mcp-bridge = "0.8"
dirs = "5.0"
base64 = "0.22"
tokio = { version = "1", features = ["fs"] }
